Get rid of 100% max-width, was preventing full bleed sizing

--- a/public/nciea.css
+++ b/public/nciea.css
@@ -239,11 +239,6 @@ a:hover {
 .cf:after {
   clear: both;
 }
-img,
-iframe,
-video {
-  max-width: 100%;
-}
 h1 {
     margin-top: 30px;
 }
